Use getFirst where applicable (#3068)